Refactor controllers and view. Rename framePicker to frameSelector. Add animation comments; next create spriteAnimationView

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- sprite animation -->
   <canvas id="spriteCanvas"></canvas>
 
-  <canvas id="framePickerCanvas"></canvas>
+  <canvas id="frameSelectorCanvas"></canvas>
 
   <!-- spritesheet squares -->
 
